# zfield

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
.cursor/rules/: clean-code.mdc
.github/workflows/: build-release.yml
backend/: ANTIVIRUS_FALSE_POSITIVES.md  BUILD.md  LINUX_BUILD_COMPATIBILITY.md  LINUX_SYSTEM_DEPENDENCIES.md  LOCALSTORAGE_FIX.md  OFFLINE_DEBUGGING.md  WEBVIEW2_TROUBLESHOOTING.md  WINDOWS_TROUBLESHOOTING.md  build.bat  build.sh  gui.py  requirements.txt  start.bat  start.sh  zdm_gui.spec  zephyr_shell_scripts_feature_d951afc4.plan.md  zfield_gui.spec  zfield_gui_linux.spec  zfield_gui_windows.spec
backend/app/: config.py  main.py  version.py
backend/app/api/: port_websocket.py  routes.py  smp_routes.py  websocket.py
backend/app/backends/: base.py  serial_backend.py  telnet_backend.py
backend/app/services/: connection_manager.py  port_monitor.py  smp_service.py
backend/packaging/: QUICKSTART.md  README.md
backend/packaging/linux/: build_deb.sh  install_fpm.sh  postinstall.sh  postremove.sh  zdm.desktop  zfield.desktop
backend/packaging/windows/: README_WEBVIEW2.md  build_msi.bat  convert_icon.py  version_info.txt  zdm.iss  zfield.iss
doc/: ARGUMENT_PARSING.md  DEBUGGING_SUBCOMMANDS.md  FINAL_IMPLEMENTATION_SUMMARY.md  SETTINGS_IMPROVEMENTS.md  ZEPHYR_SHELL_SYNTAX.md  architecture.md
examples/: README.md
frontend/: index.html
frontend/css/: vscode-codicons-0.0.40.css
frontend/js/: app.js
scripts/: README.md  bump_version.py
